# opengl-rust-example

./: Cargo.toml  README.md
01_hello_window/: Cargo.toml
01_hello_window/src/: errors.rs  main.rs
02_shader/: Cargo.toml
02_shader/src/: errors.rs  main.rs  shader.rs
03_program/: Cargo.toml
03_program/src/: common.rs  errors.rs  main.rs  program.rs  shader.rs
04_context/: Cargo.toml
04_context/src/: context.rs  errors.rs  main.rs  program.rs
05_hello_triangle/: Cargo.toml
05_hello_triangle/src/: context.rs  main.rs  program.rs
06_buffer/: Cargo.toml
06_buffer/src/: context.rs  errors.rs  main.rs  program.rs  shader.rs
07_texture/: Cargo.toml
07_texture/src/: buffer.rs  context.rs  errors.rs  main.rs  shader.rs  texture.rs
08_transform/: Cargo.toml
08_transform/src/: context.rs  main.rs
09_camera/: Cargo.toml
09_camera/src/: buffer.rs  context.rs  errors.rs  main.rs  shader.rs  vertex_array.rs
10_interactive_camera/: Cargo.toml
10_interactive_camera/src/: context.rs  image.rs  main.rs  program.rs
11_dear_imgui/: Cargo.toml
11_dear_imgui/src/: context.rs  main.rs
11_imgui/: Cargo.toml
11_imgui/src/: context.rs  main.rs
12_gui/src/: buffer.rs  context.rs  image.rs  main.rs  shader.rs  texture.rs  ui.rs  vertex_array.rs
12_imgui/: Cargo.toml
12_imgui/src/: context.rs  main.rs  ui.rs  (+1 more)
12_my_imgui/: Cargo.toml
glad/: Cargo.toml
shader/: camera.frag  camera.vert  gui.frag  gui.vert  simple.frag  simple.vert  texture.frag  texture.vert  transform.frag  transform.vert  triangle.frag  triangle.vert  ui.vert  ui_object.frag
(+5 files in other folders)
