[package]
name = "imgui"
version = "0.1.0"
authors = ["WEON-Junseop <inggull@naver.com>"]
edition = "2024"
license = ""
repository = "https://github.com/inggull/opengl-rust-example.git"
description = "An OpenGL Rust Example"

[dependencies]
spdlog-rs = "0.5.*"
glfw = "0.59.*"
gl = "0.14.*"
image = "0.25.*"
nalgebra-glm = "0.20.*"
imgui = "0.12.*"
imgui-glfw-rs = "0.12.*"
mint = "0.5.*"